wtx-macros/tests/ui/error_enum/bad_res.stderr
error: Response data must end with the `Res` suffix.
 --> tests/ui/error_enum/bad_res.rs:8:10
  |
8 |   struct ResDSA;
  |          ^^^^^^
